# control-engine

./: .env  .gitignore  BACKEND_REQUIREMENTS.md  Cargo.toml  DATABASE_SETUP.md  DEPLOYMENT.md  MVP_REQUIREMENTS.md  NEXT_PHASE.md  PHASE_1_COMPLETION_REPORT.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  docker-compose.yml  setup_database.sh
migrations/: 20250904202518_initial_schema.sql
rituals/: Cargo.toml  energy_attunement.wasm  energy_attunement.wat  shadow_integration.wasm  shadow_integration.wat
rituals/rituals/: README.md  codex_rituals.d.ts  codex_rituals.js  codex_rituals_bg.wasm  codex_rituals_bg.wasm.d.ts  package.json
rituals/src/: lib.rs
src/: auth.rs  cli.rs  database.rs  engine.rs  handlers.rs  lib.rs  main.rs  models.rs  reflection.rs  ritual.rs  server.rs  state.rs
tests/: integration_tests.rs
web/: .env.local.example  package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/components/: RitualCreator.tsx
web/src/components/auth/: auth-page.tsx
web/src/components/dashboard/: dashboard.tsx
web/src/components/profile/: profile-section.tsx
web/src/components/ritual/: ritual-interface.tsx  ritual-library.tsx
web/src/components/state/: state-visualization.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  loading-spinner.tsx  select.tsx  textarea.tsx
web/src/hooks/: useAuth.tsx
web/src/lib/: api.ts  auth-context.tsx
