[package]
name = "codex-control-engine"
version = "0.1.0"
edition = "2021"
description = "A symbolic runtime for executing rituals and evolving inner archetypes"
authors = ["Codex Builder"]

[[bin]]
name = "codex"
path = "src/main.rs"

[[bin]]
name = "codex-server"
path = "src/server.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive"] }
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# WASM runtime
wasmtime = "15.0"
# HTTP client for AI integration
reqwest = { version = "0.11", features = ["json"] }
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Color output
colored = "2.1"
# UUID generation for symbolic IDs
uuid = { version = "1.6", features = ["v4", "serde"] }
# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
# Configuration
config = "0.14"
# Directory creation
dirs = "5.0"
# Signal handling
ctrlc = "3.4"
# Web server framework
axum = "0.7"
# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
# WebSocket support
axum-server = "0.7"
# Authentication
jsonwebtoken = "9.3"
# Password hashing
bcrypt = "0.15"
# Environment variables
dotenvy = "0.15"
# CORS handling
tower-http = { version = "0.6", features = ["cors", "fs"] }
# Rate limiting and middleware
tower = { version = "0.5", features = ["util", "timeout", "limit"] }
# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Random number generation
rand = "0.8"

[dev-dependencies]
tempfile = "3.8" 